--- a/DB.env
+++ b/DB.env
@@ -1,5 +1,11 @@
 PORT = 5432
 DB_HOST = db
+DB_LOCAL = localhost
+
+LOCAL_DB = cocos
+LOCAL_USER = postgres
+LOCAL_PASSWORD = artem
+
 POSTGRES_DB = myvoice_db
-POSTGRES_USER = myvoice_user
+POSTGRES_USER = postgres
 POSTGRES_PASSWORD = myvoice_user_pass
