added based map data

--- a/DB.env
+++ b/DB.env
@@ -2,10 +2,10 @@ PORT = 5432
 DB_HOST = db
 DB_LOCAL = localhost
 
-LOCAL_DB = cocos
+LOCAL_DB = moretechdb
 LOCAL_USER = postgres
 LOCAL_PASSWORD = artem
 
-POSTGRES_DB = myvoice_db
+POSTGRES_DB = moretech_db
 POSTGRES_USER = postgres
-POSTGRES_PASSWORD = myvoice_user_pass
+POSTGRES_PASSWORD = moretech_user_pass
