--- a/open-cv/requirements.txt
+++ b/open-cv/requirements.txt
@@ -1,8 +1,57 @@
-schedule==1.1.0
-numpy==1.24.3
-argparse==1.4.0
-imutils==0.5.4
+aiofiles==0.7.0
+amqp==5.1.1
+annotated-types==0.6.0
+anyio==3.7.1
+asgiref==3.4.1
+backports.zoneinfo==0.2.1
+billiard==4.1.0
+celery==5.3.4
+certifi==2023.7.22
+click==8.1.7
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.3.0
+cmake==3.27.6
+colorama==0.4.6
 dlib==19.10.0
-opencv-python==4.5.5.64
+dnspython==2.4.2
+email-validator==2.0.0.post2
+exceptiongroup==1.1.3
+fastapi==0.66.0
+h11==0.12.0
+httpcore==0.18.0
+httptools==0.6.0
+httpx==0.25.0
+idna==3.4
+imutils==0.5.4
+itsdangerous==2.1.2
+Jinja2==3.0.1
+kombu==5.3.2
+loguru==0.7.2
+MarkupSafe==2.0.1
+numpy==1.24.3
+opencv-python==4.8.1.78
+orjson==3.9.9
+prompt-toolkit==3.0.39
+pydantic==1.8.2
+pydantic-core==2.10.1
+pydantic-extra-types==2.1.0
+pydantic-settings==2.0.3
+python-dateutil==2.8.2
+python-dotenv==1.0.0
+python-multipart==0.0.6
+PyYAML==6.0.1
+schedule==1.1.0
 scipy==1.10.1
-cmake==3.22.5
+six==1.16.0
+sniffio==1.3.0
+starlette==0.14.2
+typing-extensions==3.10.0.0
+tzdata==2023.3
+ujson==5.8.0
+uvicorn==0.14.0
+vine==5.0.0
+watchfiles==0.21.0
+wcwidth==0.2.8
+websockets==11.0.3
+win32-setctime==1.1.0
